--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -1,3 +1,17 @@
 page-home {
+}
 
+#localVideo {
+  position: absolute;
+  width: 200px;
+  height: 200px;
+  bottom: 20px;
+  right: 20px;
+  border-radius: 50%;
+}
+
+#remote {
+  width: 100%;
+  margin-right: auto;
+  margin-left: auto;
 }
